--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <h1 id="quote">Welcome to my creative space. <br> Here,passion meets profession.</h1>
     </div>
     <div class="page2">
-          <h1 id="services">Skills</h1>
+          <h1 id="skills">Skills</h1>
             <div class="cards">
 
               <div class="card">
